<resources>
    <string name="app_name">AppThiBangLaiXe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_home">Trang chủ</string>
    <string name="app_favorite">Thi sát hạch</string>
    <string name="app_history">Tìm kiếm</string>
    <string name="app_account">Account</string>
    <string name="app_profile">My profile</string>
    <string name="app_change">Change Password</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="title_activity_thi_sat_hoach">ThiSatHoachActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>