<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home" android:title="@string/app_home"
            android:icon="@drawable/ic_baseline_home_24"/>
        <item android:id="@+id/nav_favorite" android:title="@string/app_favorite"
            android:icon="@drawable/ic_baseline_playlist_add_check_24"/>
        <item android:id="@+id/nav_history" android:title="@string/app_history"
            android:icon="@drawable/ic_baseline_search_24"/>
    </group>
    <item android:title="@string/app_account">
        <menu>
            <item android:id="@+id/nav_my_profile"
                android:title="@string/app_profile"
                android:icon="@drawable/ic_baseline_person_24"/>
            <item android:id="@+id/nav_changepass"
                android:title="@string/app_change"
                android:icon="@drawable/ic_lock_24"/>
        </menu>
    </item>
</menu>